--- a/ensign/templates/includes/footer/footer.html
+++ b/ensign/templates/includes/footer/footer.html
@@ -23,7 +23,7 @@
         margin-left: -1.7rem;
       }
       .vr {
-        border-left: 2px solid grey;
+        border-left: 2px solid black;
 
         height: 7rem;
       }
@@ -36,11 +36,12 @@
   </head>
 
   <body>
-    <div>
+    <div style="background-color: #F5F5F5;">
+      <div class="=col-md-3"></div>
       <div class="row d-flex align-items-center">
         <div class="col-md-3"><img src="http://localhost:8000/files/images13b808.png" alt="logo" /></div>
 
-        <div class="col-md-4 d-flex">
+        <div class="col-md-2 d-flex">
           <div class="vr"></div>
           <div class="d-flex">
             <div>
@@ -51,7 +52,7 @@
             </div>
 
             <div>
-              #257, 42nd St, AP Block, Selector 8, KK Nager,<br />
+              #257, 42nd St, AP Block, Sector 8, KK Nagar,<br />
               Chennai, Tamil Nadu 600078
               <br /><br />
               <div class="d-flex">
@@ -63,7 +64,7 @@
                 </div>
 
                 <div class="d-flex">
-                  <div class=""><a>customersupport@ensignimgsure.com</a></div>
+                  <div class=""><a>customersupport@ensignsure.com</a></div>
                 </div>
               </div>
             </div>
